adding block content thing

--- a/source/web/dashboard/templates/base.html
+++ b/source/web/dashboard/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -108,6 +108,8 @@
 
         <!-- page content -->
         <div class="right_col" role="main">
+            {% block content %}
+            {% endblock %}
         </div>
         <!-- /page content -->
 
