hookup for ajax_get_trans_matrix()

--- a/source/web/dashboard/templates/dashboard/one_year_transitions.html
+++ b/source/web/dashboard/templates/dashboard/one_year_transitions.html
@@ -94,9 +94,10 @@
                         data: {'matrix_source': matrix_source},
                         headers: {'X-CSRFToken': csrftoken,},
                         dataType: 'json',
-                        success: function (){
-                            if (true)
+                        success: function (response){
+                            if (response.data)
                             {
+                            
                             }
                         },
                         failure: function (){
