include highcharts in base

--- a/source/web/dashboard/templates/base.html
+++ b/source/web/dashboard/templates/base.html
@@ -136,6 +136,12 @@
     <!-- Custom Theme Scripts -->
     <script src="{% static 'dashboard/build/js/custom.min.js' %}"></script>
 
+    <!-- HighCharts -->
+    <script src="{% static 'dashboard/highcharts/highcharts.js' %}"></script>
+    <script src="{% static 'dashboard/highcharts/modules/exporting.js' %}"></script>
+    <script src="{% static 'dashboard/highcharts/modules/export-data.js' %}"></script>
+    <script src="{% static 'dashboard/highcharts/modules/accessibility.js' %}"></script>
+
     <!-- Custom Page Scripts -->
     <script>
         var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
